<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">AUTO SHARING</string>
<string name="action_settings">Settings</string>
<string name="time_picker_example">Time Picker Example</string>
<string name="time_pick">Pick the time and press save button</string>
<string name="time_save">Save</string>
<string name="time_selected"></string>
<string name="time_current">The Time is:</string>
<!--<string name="app_name">New User Register</string>-->
<string name="hello_world">Hello world!</string>
<!--<string name="action_settings">Settings</string>-->
<string name="string_enter_name">Enter your name</string>
<string name="string_choose_username">Choose your username</string>
<string name="string_choose_password">Choose your password</string>
<string name="string_enter_email">Enter your email</string>
<string name="button_register">Register</string>
</resources>
    <!--<resources>-->
    <!--<string name="app_name">App</string>-->
    <!--</resources>-->